Fix spacing difference when selecting airport on homepage

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -149,6 +149,7 @@ section h1 {
 }
 
 .leavingAirportSelectorContainer, .arrivingAirportSelectorContainer {
+    width: 320px;
     height: 125px;
     display: flex;
 }
